--- a/index.html
+++ b/index.html
@@ -53,10 +53,12 @@
                         <a class="nav-link" href="hiking.html">Hiking</a>
                     </li>
                 </ul>
-                <form class="form-inline mt-2 mt-md-0">
+                <div><script async src="https://cse.google.com/cse.js?cx=009851424572254299239:tki8uwh3tkk"></script>
+                    <div class="gcse-search"></div></div>
+<!--                 <form class="form-inline mt-2 mt-md-0">
                     <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button> 
-                </form>
+                </form> -->
             </div>
         </nav>
     </header>
