--- a/index.html
+++ b/index.html
@@ -55,6 +55,12 @@
                 </ul>
                 <div><script async src="https://cse.google.com/cse.js?cx=009851424572254299239:tki8uwh3tkk"></script>
                     <div class="gcse-search"></div></div>
+                <style>
+                    .gsc-control-se{
+                        background-color: #335557;
+                        boreder: none;
+                    }
+                </style>
 <!--                 <form class="form-inline mt-2 mt-md-0">
                     <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button> 
