--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
                 </ul>
                 
                 <form class="form-inline mt-2 mt-md-0"> 
+                    <form name="jksearch" action="http://www.google.com/search" method="get" onSubmit="jksitesearch(this)">
                 
                  <form name="jksearch" action="http://www.google.com/search" method="get" onSubmit="jksitesearch(this)">
 
