--- a/hiking.html
+++ b/hiking.html
@@ -18,6 +18,15 @@
         function setDate() {
             document.getElementById('date').innerHTML = Date();
         }
+        function changeH2Easy() {
+            document.getElementById("easy").innerHTML = "Easy trails";
+        };
+        function changeH2Medium() {
+            document.getElementById("med").innerHTML = "Midium difficulty trails";
+        };
+        function changeH2Difficult() {
+            document.getElementById("diff").innerHTML = "Difficult trails";
+        };
     </script>
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.1.3/materia/bootstrap.min.css"> -->  
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -127,7 +136,8 @@
             <div class="row d-print-block">
                 <div class="col-md-12 col-lg-8 d-print-inline">
                     <section class="left-tab">
-                        <h2 class="mt-3 text-center"><i class="fas fa-baby"></i>Easy trails </h2>
+                        <h2 class="mt-3 text-center" id="easy" onmouseover="changeH2Easy()"><i class="fas fa-baby"></i>
+                            trails </h2>
                         <p class="text-justify">Easy trails are the trails which would be comfortable and not stressful
                             to hike with kids, or
                             let's
@@ -163,7 +173,8 @@
 
                         </table>
 
-                        <h2 class="text-center"><i class="fas fa-child"></i>Midium difficulty trails</h2>
+                         <h2 class="text-center" id="med" onmouseover="changeH2Medium()"><i class="fas fa-child"></i>
+                            trails</h2>
                         <p class="text-justify">Midium difficulty trails are for those, who are not afraid a bit of
                             challenge, has a basic
                             hiking
@@ -198,7 +209,8 @@
                             </tr>
                         </table>
 
-                        <h2 class="text-center"> <i class="fas fa-hiking"></i>Difficult trails</h2>
+                          <h2 class="text-center" id="diff" onmouseover="changeH2Difficult()"><i
+                                class="fas fa-hiking"></i> trails</h2>
                         <p class="text-justify">If you're a fan of hiking, if climbing speep hills and following the
                             hidden routs does't
                             scare you,
