--- a/hiking.html
+++ b/hiking.html
@@ -74,7 +74,7 @@
                         <a class="nav-link" href="hiking.html">Hiking <span class="sr-only">(current)</span></a>
                     </li>
                 </ul>
-               <script type="text/javascript">
+               <script>
                     var domainroot = "https://kroplya.github.io"
 
                     function Gsitesearch(curobj) {
@@ -94,7 +94,7 @@
             </div>
         </nav>
     </header>
-    <main role="main" class="flex-shrink-0">
+    <main class="flex-shrink-0">
         <div class="container-fluid d-print-none">
             <p> The current date is <span id="date"></span></p>
 
