--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             </div>
         </nav>
     </header>
-    <main role="main" class="flex-shrink-0">
+    <main class="flex-shrink-0">
 
         <div class="container-fluid d-md-none">
             <div id="accordion" class="shadow p-0 mb-5 bg-white rounded d-print-none" style="width:100%;">
