--- a/events.html
+++ b/events.html
@@ -80,7 +80,7 @@
             </div>
         </nav>
     </header>
-    <main role="main" class="flex-shrink-0" style="margin-top: -4px;">
+    <main class="flex-shrink-0" style="margin-top: -4px;">
         <div class="d-none d-md-block d-print-none">
             <div id="carouselExampleIndicators" class="carousel slide carousel-fade" data-interval="false"
                 style="background-color:#d0ca89">
