--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         <a class="nav-link" href="hiking.html">Hiking</a>
                     </li>
                 </ul>
-                    <script type="text/javascript">
+                    <script>
 
                             var domainroot="https://kroplya.github.io"
                             
