--- a/events.html
+++ b/events.html
@@ -60,7 +60,7 @@
                         <a class="nav-link" href="hiking.html">Hiking </a>
                     </li>
                 </ul>
-                <script type="text/javascript">
+                <script>
                     var domainroot = "https://kroplya.github.io"
 
                     function Gsitesearch(curobj) {
