--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="google-site-verification" content="UIXuvhSv9lHmw3GW15GK9xiMLwA13diXQXmNtyLBk3s" />
 
-    <title>The Greater Region</title>
+    <title>The Grande Region</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
     <!-- for fixing navbar top fixed overlapping -->
     <script>
