--- a/hiking.html
+++ b/hiking.html
@@ -189,10 +189,10 @@
                          <h2 class="text-center" id="med" onmouseover="changeH2Medium()"><i class="fas fa-child"></i>
                             trails</h2>
                         <p class="text-justify">Midium difficulty trails are for those, who are not afraid a bit of
-                            challenge, has a basic
+                            challenge, have a basic
                             hiking
-                            exeriance and is in a good shape.
-                            Kids would not mind to explore these as well, provided, they like to walk and you didn't
+                            experience and is in a good shape.
+                            Kids would not mind to explore these as well, provided, they like walking and you didn't
                             forget
                             about food and water.</p>
 
@@ -224,14 +224,14 @@
 
                           <h2 class="text-center" id="diff" onmouseover="changeH2Difficult()"><i
                                 class="fas fa-hiking"></i> trails</h2>
-                        <p class="text-justify">If you're a fan of hiking, if climbing speep hills and following the
+                        <p class="text-justify">If you're a fan of hiking, if climbing steep hills and following the
                             hidden routs does't
                             scare you,
                             you'll enjoy the Difficult trails.
                             It could be a true challenge and those trails are for hikers who keeps themselvels in a
                             really good
                             shape. If your kids are real explorers
-                            and don't moan and whine about physical exercises, they could appritiate these trais as
+                            and don't moan and whine about physical exercises, they could appreciate these trais as
                             well. Don't
                             forget to bring more water and food.
                         </p>
