--- a/hiking.html
+++ b/hiking.html
@@ -191,7 +191,7 @@
                         <p class="text-justify">Midium difficulty trails are for those, who are not afraid a bit of
                             challenge, have a basic
                             hiking
-                            experience and is in a good shape.
+                            experience and are in a good shape.
                             Kids would not mind to explore these as well, provided, they like walking and you didn't
                             forget
                             about food and water.</p>
@@ -228,10 +228,10 @@
                             hidden routs does't
                             scare you,
                             you'll enjoy the Difficult trails.
-                            It could be a true challenge and those trails are for hikers who keeps themselvels in a
+                            It could be a true challenge and those trails are for hikers who keep themselvels in a
                             really good
                             shape. If your kids are real explorers
-                            and don't moan and whine about physical exercises, they could appreciate these trais as
+                            and don't moan and whine about physical exercises, they could appreciate these trails as
                             well. Don't
                             forget to bring more water and food.
                         </p>
